# katvan-editor.github.io

./: .editorconfig  CNAME  Cargo.toml  bacon.toml  index.html
.github/workflows/: deploy.yml
.well-known/: org.flathub.VerifiedApps.txt
assets/: style.css
src/: main.rs
templates/: index.html
